infra/envoy/envoy.mtls.yaml
# Production-like Envoy configuration using mTLS to IAM gRPC and the protected
# echo upstream. Local plaintext transport remains in envoy.local.yaml.
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 0

static_resources:
  listeners:
    - name: gateway
      address:
        socket_address:
          address: 0.0.0.0
          port_value: __LISTEN_PORT__
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /v1/health/
                          route:
                            cluster: iam_http
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /echo
                          route:
                            cluster: protected_echo
                            timeout: 5s
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      failure_mode_allow: false
                      status_on_error:
                        code: ServiceUnavailable
                      grpc_service:
                        envoy_grpc:
                          cluster_name: iam_authz
                        timeout: 0.250s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: iam_authz
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            alpn_protocols: ["h2"]
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3
            tls_certificates:
              - certificate_chain:
                  filename: __ENVOY_CERT__
                private_key:
                  filename: __ENVOY_KEY__
            validation_context:
              trusted_ca:
                filename: __CA_CERT__
          sni: localhost
      load_assignment:
        cluster_name: iam_authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: __IAM_GRPC_HOST__
                      port_value: __IAM_GRPC_PORT__
    - name: iam_http
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: iam_http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: __IAM_HTTP_HOST__
                      port_value: __IAM_HTTP_PORT__
    - name: protected_echo
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            alpn_protocols: ["http/1.1"]
            tls_certificates:
              - certificate_chain:
                  filename: __ENVOY_CERT__
                private_key:
                  filename: __ENVOY_KEY__
            validation_context:
              trusted_ca:
                filename: __CA_CERT__
          sni: localhost
      load_assignment:
        cluster_name: protected_echo
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: __ECHO_HTTP_HOST__
                      port_value: __ECHO_HTTP_PORT__
